[package]
name = "memdbg"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
keywords = ["debug", "print", "memory", "view", "no_std"]
categories = ["value-formatting"]
repository = "https://github.com/greaka/memdbg"
description = "A formatter for raw memory"

[features]
default = ["debug"]
debug = [] # Enables debug printing for arbitrary types. See `buf_dbg!`
stringify = [] # Enables stringified printing for arbitrary types. See `buf_dbg!``
